--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -23,6 +23,27 @@
  camaria_nationalistic_fervor:0 "Nationalistic Fervor"
  camaria_nationalistic_fervor_desc:0 "Saelian Empire from the north, Chilverchia from the east and various sailors from west-south. These all influences tried to take control of our lands and use our hands and resources to help their goals. But we, people of Camaria will stand together against all aggressors!"
 
+ ## Brianola
+
+ brianoli_ideas:0 "Brianoli Ideas"
+ brianoli_ideas_bonus:0 "Brianoli Ambition"
+ brianoli_ideas_start:0 "Brianoli Traditions"
+
+ brianoli_forgiveness_of_sins:0 "Forgiveness of Sins"
+ brianoli_forgiveness_of_sins_desc:0 "When we started expanding our republic we encountered a problem where we needed to reconcile our revolutionary ideas with local administrations that were often composed of nobility. Kicking them out and estabilishing our control wouldn't be effective, but maintaining them in local positions would make our people angry that we don't take our promises seriously. This problem was solved when idea of allowing local nobles to abandon their noble heritage in turn of allowing them to maintain most of their possesions and positions."
+ brianoli_common_legionaries:0 "Common Legionaries"
+ brianoli_common_legionaries_desc:0 "Surrounded by states that don't agree with our existence we found a reason to create an army that would be enough to maintain our enemies at bay. Legions were established that take local areas under its jurisdiction which allows the state to equally recruit soldiers into its army without burdening specific regions into supplying us with soldiers."
+ brianoli_camarian_network:0 "Camarian Network"
+ brianoli_camarian_network_desc:0 "Paranoia of Adalberto Masccione after his assasination attempt made him establish a network of spies in entire Camaria to spy on rulers, important nobles and every suspicious activity that might endanger him. After he died the spies didn't stop working and still reported to next consuls, at first it was ignored and treated as unnecessary but when Luca Masccione took control he decided to expand the network beyond camaria and use them in more political matters."
+ brianoli_crossbows_of_bria:0 "Crossbows of Bria"
+ brianoli_crossbows_of_bria_desc:0 "In old times Crossbows of Bria were known soldiers of fortune that could defeat entire armies just by precision of their crossbows. Those glories are now long gone and their organisation stopped existing, but spirit of their warfare still functions as important part in our legions. Every soldier is forced to train their accuracy with weapons and how to maintain discipline even in direst situation."
+ brianoli_masccion_rule:0 "Masccion Rule"
+ brianoli_masccion_rule_desc:0 "Solidification of power by Masccion dynasty in our republic created a new thought of how to govern states. Techniques as dividing people in unimportant matters, diverting peoples anger to target people endangering position of their power are known by brianoli intellectuals. It caused moral discussions if such state should be allowed to continue its existence."
+ brianoli_commonwealth_of_villages:0 "Commonwealth of Villages"
+ brianoli_commonwealth_of_villages_desc:0 "Villages normally are isolated from each other and don't feel that unified unity, it also causes them less willing to help others if needed. But if we established a community that united all of them and forced them to help each other it can cause our production better by faster solving of local problems"
+ brianoli_peasant_liberation:0 "Peasant Liberation"
+ brianoli_peasant_liberation_desc:0 "Priority of our state is to give peasants attention and rights that they deserve, other nations can pretend that they also care about their lifes but we know that its just a mascarade. A peasant can't be under rule of aristocrate, noble or merchant that don't understand their needs and only tries to exploit their work for their own benefit. To achieve this goals we need every peasant be ready to fight for the cause that gave them freedom and will give it to others."
+
  #### stuff
 
  ## idk man
