--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -75,9 +75,9 @@
  memlashal_nusabate_of_the_north:0 "Nusabate of the North"
  memlashal_nusabate_of_the_north_desc:0 "Memlashal is standing alone against numerous heathens - eneratians, sigilians, anichvarians and tribal nations only wait for us to collapse. They are so focused on our fall they won't see our rise, for we are the true masters of Kakigia."
  
- group_baraqazhi_ideas:0 "Baraqzhi Minor Ideas"
- group_baraqazhi_ideas_start:0 "Baraqzhi Minor Traditions"
- group_baraqazhi_ideas_bonus:0 "Baraqzhi Minor Ambition"
+ group_baraqazhi_ideas:0 "Baraqazhi Minor Ideas"
+ group_baraqazhi_ideas_start:0 "Baraqazhi Minor Traditions"
+ group_baraqazhi_ideas_bonus:0 "Baraqazhi Minor Ambition"
  baraqazhi_shepherds_of_baraqhaz:0 "Shepherds of Baraqhaz"
  baraqazhi_shepherds_of_baraqhaz_desc:0 "Our Shepherds are known for their wool around all of Hestani Basin. If we increase the amount of wool we make, we could profit from it."
  baraqazhi_mountainous_diversity:0 "Mountainous Diversity"
