lacking merhaan modifiers

--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -14,6 +14,7 @@
  merhaan.3.t:0 "Ovogstegian Proclamation"
  merhaan.3.desc:0 "New faith of Ovogsteg was proclaimed. Now shamans are ready to assimilate different sects into our new church, many shamans from different areas are interested in our new creation and decided to migrate here but it will take some time. Let the new age of Merhaan belief start!\n\nNow you will have 50 years to have at least 3 harmonized religions. If you don't do it in 50 years you will recieve a debuff and will need to harmonize all merhaan faiths.\n During this time you will recieve a massive debuff when trying to harmonize other religious groups and recieve events about shamans from different sects come here. Good Luck"
  merhaan.3.a:0 "I Understand"
+ merhaan_starting_enthusiasm:0 "Starting Enthusiasm"
 
  merhaan.4.t:0 "Church Victorious"
  merhaan.4.desc:0 "Since creation of our church we had many supporters, but also many doubters. But today we stand victorious above them, our faith is more united than ever and there are no signs that it will ever collapse. Now we can show this wisdom to everyone, not only merhaani people will know about our ways.\n\nNow you can harmonize different faiths."
@@ -31,6 +32,7 @@
  merhaan.7.t:0 "Church Disunited in Teachings"
  merhaan.7.desc:0 "We started to assimilate another religion that doesn't have anything common with our faith. Many shamans are now in disarray and don't know what to do, they also try to convince us that we should first focus on bringing our brothers and sisters to enlightenment before we try to teach others."
  merhaan.7.a:0 "Okay"
+ merhaan_disunified_efforts:0 "Disunified Efforts"
 
  merhaan.8.t:0 "Shamans United"
  merhaan.8.desc:0 "By stopping our attempts to assimilate other faiths we united shamans once again."
