prov names + gov mechanic + flags + fixes + icons + fixes

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -3,3 +3,5 @@
  samadian_amijil_reform_desc:0 "Samadian states often distrust one another and generally focus on self-preservation through strong military."
  rakkha_empire_reform:0 "Rakkha Empire"
  rakkha_empire_reform_desc:0 "Northern states of western Samadia have often taken a matle of 'Guardian State', not only protecting the southern states from nomadic invaders, but also controlling vital trading routes."
+ mechanic_only_tributaries_same_culture_group:0 "Can only have tributaries of the same culture group."
+ mechanic_only_tributaries_same_culture_group_yes:0 "Can only have tributaries of the same culture group."
