--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -398,6 +398,8 @@
  cach_moi_rebels_army:0 "$RELIGION$ Army"
  cach_moi_rebels_demand:0 "Convert $COUNTRYNAME$"
 
+ eastern_pagan:0 "Eastern Pagan"
+
  gajifeng_spiritualism:0 "Gajifeng Spiritualism"
  gajifeng_spiritualism_religion_desc:0 "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  gajifeng_spiritualism_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
