--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1658,7 +1658,7 @@
  PROV1657:0 "Outer Khutigar Bay"
  PROV1658:0 "Kosara"
  PROV1659:0 "1659"
- PROV1660:0 "1660"
+ PROV1660:0 "Gichiga"
  PROV1661:0 "Kahilese"
  PROV1662:0 "North Pemenian Coast"
  PROV1663:0 "Papachisen"
@@ -1787,11 +1787,11 @@
  PROV1786:0 "1786"
  PROV1787:0 "Amealungali Coast"
  PROV1788:0 "1788"
- PROV1789:0 "1789"
+ PROV1789:0 "Mayagzad"
  PROV1790:0 "Saramaran"
  PROV1791:0 "Aqamagew"
  PROV1792:0 "1792"
- PROV1793:0 "1793"
+ PROV1793:0 "Wiigawas"
  PROV1794:0 "1794"
  PROV1795:0 "1795"
  PROV1796:0 "1796"
@@ -1810,8 +1810,8 @@
  PROV1809:0 "1809"
  PROV1810:0 "1810"
  PROV1811:0 "1811"
- PROV1812:0 "1812"
- PROV1813:0 "1813"
+ PROV1812:0 "Maskazhi"
+ PROV1813:0 "Giziziib"
  PROV1814:0 "1814"
  PROV1815:0 "1815"
  PROV1816:0 "Dakhani Tip"
@@ -1831,18 +1831,18 @@
  PROV1830:0 "1830"
  PROV1831:0 "1831"
  PROV1832:0 "1832"
- PROV1833:0 "1833"
- PROV1834:0 "1834"
+ PROV1833:0 "Dibwaazh"
+ PROV1834:0 "Waagisho"
  PROV1835:0 "1835"
  PROV1836:0 "1836"
- PROV1837:0 "1837"
- PROV1838:0 "1838"
- PROV1839:0 "1839"
- PROV1840:0 "1840"
- PROV1841:0 "1841"
+ PROV1837:0 "Zaagkwa"
+ PROV1838:0 "Akwasana"
+ PROV1839:0 "Giishabikwa"
+ PROV1840:0 "Giyjibawada"
+ PROV1841:0 "Nabagan"
  PROV1842:0 "1842"
  PROV1843:0 "1843"
- PROV1844:0 "1844"
+ PROV1844:0 "Zhaamashka"
  PROV1845:0 "Tarhianahcoill"
  PROV1846:0 "Tarhianahcoill"
  PROV1847:0 "1847"
@@ -2210,7 +2210,7 @@
  PROV2209:0 "2209"
  PROV2210:0 "2210"
  PROV2211:0 "Dakhalbum"
- PROV2212:0 "2212"
+ PROV2212:0 "Lake Harold"
  PROV2213:0 "2213"
  PROV2214:0 "2214"
  PROV2215:0 "Dosibur"
@@ -2470,9 +2470,9 @@
  PROV2469:0 "Quincha"
  PROV2470:0 "Merica"
  PROV2471:0 "Tahaki"
- PROV2472:0 "2472"
- PROV2473:0 "2473"
- PROV2474:0 "2474"
+ PROV2472:0 "Kahina"
+ PROV2473:0 "Karichir"
+ PROV2474:0 "Niska"
  PROV2475:0 "Kicahti"
  PROV2476:0 "Puhakche"
  PROV2477:0 "Puchpeseta"
@@ -2502,7 +2502,7 @@
  PROV2501:0 "2501"
  PROV2502:0 "2502"
  PROV2503:0 "2503"
- PROV2504:0 "2504"
+ PROV2504:0 "Kwistecha"
  PROV2505:0 "2505"
  PROV2506:0 "2506"
  PROV2507:0 "2507"
@@ -2512,10 +2512,10 @@
  PROV2511:0 "2511"
  PROV2512:0 "2512"
  PROV2513:0 "2513"
- PROV2514:0 "2514"
+ PROV2514:0 "Kirisa"
  PROV2515:0 "2515"
  PROV2516:0 "2516"
- PROV2517:0 "2517"
+ PROV2517:0 "Wakhac"
  PROV2518:0 "2518"
  PROV2519:0 "2519"
  PROV2520:0 "2520"
@@ -2527,12 +2527,12 @@
  PROV2526:0 "Ekhata"
  PROV2527:0 "Yahiwika"
  PROV2528:0 "Kwachissa"
- PROV2529:0 "2529"
+ PROV2529:0 "Ahiri"
  PROV2530:0 "2530"
  PROV2531:0 "2531"
  PROV2532:0 "2532"
  PROV2533:0 "2533"
- PROV2534:0 "2534"
+ PROV2534:0 "Kaabkicha"
  PROV2535:0 "2535"
  PROV2536:0 "2536"
  PROV2537:0 "2537"
@@ -2549,7 +2549,7 @@
  PROV2548:0 "2548"
  PROV2549:0 "2549"
  PROV2550:0 "2550"
- PROV2551:0 "2551"
+ PROV2551:0 "Tiyahkikwa"
  PROV2552:0 "2552"
  PROV2553:0 "2553"
  PROV2554:0 "2554"
@@ -2582,16 +2582,16 @@
  PROV2581:0 "2581"
  PROV2582:0 "2582"
  PROV2583:0 "2583"
- PROV2584:0 "2584"
- PROV2585:0 "2585"
- PROV2586:0 "2586"
- PROV2587:0 "2587"
- PROV2588:0 "2588"
- PROV2589:0 "2589"
- PROV2590:0 "2590"
- PROV2591:0 "2591"
- PROV2592:0 "2592"
- PROV2593:0 "2593"
+ PROV2584:0 "Poohabi"
+ PROV2585:0 "Gichamoop"
+ PROV2586:0 "Michada"
+ PROV2587:0 "Inkwodena"
+ PROV2588:0 "Mangacho"
+ PROV2589:0 "Zesegan"
+ PROV2590:0 "Samapchi"
+ PROV2591:0 "Wigizag"
+ PROV2592:0 "Oshkamaama"
+ PROV2593:0 "Waasagabe"
  PROV2594:0 "Heisean Sea"
  PROV2595:0 "2595"
  PROV2596:0 "2596"
