Watlistani Ideas and Sunbati Ideas Loc

--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -58,3 +58,21 @@
  ehtywira_cultural_resilience_desc:0 "Ehtywirans are a resilient folk, that have resisted any attempts of eradication from both Mewitani and Ewitrawi peoples."
  ehtywira_tight_control:0 "Tight Control"
  ehtywira_tight_control_desc:0 "Our culture was always about authority. People and subjects of the kingdom are obedient to the Ruler, which he uses to keep a tight control over them."
+ 
+ group_sunbat_ideas:0 "Sunbati Ideas"
+ group_sunbat_ideas_start:0 "Sunbati Traditions"
+ group_sunbat_ideas_bonus:0 "Sunbati Ambition"
+ sunbat_religious_tax:0 "Religious Tax"
+ sunbat_religious_tax_desc:0 "To increase amount of gold in our treasury, we have to create new taxes. Altough our merchants and citizens don't like new taxes, we can always tax the outsiders following different faiths!"
+ sunbat_hestani_settlers:0 "Hestani Settlers"
+ sunbat_hestani_settlers_desc:0 "With time, habitable space on the western side of lake Hestan started to run out, so many people started to seeking opportunity to settle on the other side of the lake, and that's how Sunbati city states came to be. It makes Sunbati folk more cohesive."
+ sunbat_professional_militias:0 "Professional Militias"
+ sunbat_professional_militias_desc:0 "With advancements in military tactics, we can rely on our army alone no longer. We need to incorporate Militias into administration of our army, and increase they professionalism to keep up with times."
+ sunbat_qawartian_city_states:0 "Qawartian City States"
+ sunbat_qawartian_city_states_desc:0 "Sunbati city states are key players in Hestani and Qawartian trade, and so their trade importance is undeniable."
+ sunbat_coastal_settlements:0 "Coastal Settlements"
+ sunbat_coastal_settlements_desc:0 "Our cities were founded on coasts, and with little space left beacuse of Hitraan mountains, we were left with no choice but to master the art of seaside adaptation."
+ sunbat_pemenian_middlemen:0 "Pemenian Middlemen"
+ sunbat_pemenian_middlemen_desc:0 "Sunbati republics lie on the road connecting Pemenia with the Visparaya, and they leverage this position to dominate local trade routes."
+ sunbat_preserve_the_tradition:0 "Preserve the Tradition"
+ sunbat_preserve_the_tradition_desc:0 "Our roots lie on the other side of the Hestan lake, altough we had adapt to different conditions on this side of the lake, we can't forget our heritage, our unique architecture, our rich literature. We must do everything to preserve it!"
