--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -110,6 +110,24 @@
  auruvata_gatuzairitem_desc:0 "Gatuzairitem is a road system connecting north of our country with its most southern parts, going through the Baraqhaz Mountains Range, and it also serves as a good supply chain for our armies during the time of war."
  auruvata_royal_palace_of_gabrasahr:0 "Royal Palace of Gabrasahr"
  auruvata_royal_palace_of_gabrasahr_desc:0 "Royal Palace of Gabrasahr is seen as one of the monuments of prestige and rule over our lands. And many fear it, as its also seen as a symbol of our iron hand."
+ 
+ watlistani_group_ideas:0 "Watlistani Ideas"
+ watlistani_group_ideas_start:0 "Watlistani Traditions"
+ watlistani_group_ideas_bonus:0 "Watlistani Ambition"
+ watlistani_visparayan_influence:0 "Visparayan Influence"
+ watlistani_visparayan_influence_desc:0 "Due to Watlistan neighbouring the Visparaya, the exchange of thought between the two is increased, and so we profit from Visparayan administrative inventions."
+ watlistani_professional_mercenaries:0 "Professional Mercenaries"
+ watlistani_professional_mercenaries_desc:0 "Watlistan is known abroad mainly for their highly disciplined mercenaries, so why don't we employ them ourselves?"
+ watlistani_strenghten_our_faith:0 "Strengthen Our Faith"
+ watlistani_strenghten_our_faith_desc:0 "Watlistan is torn apart between three different faiths. If we want to make sure our faith prevails, we must increase our efforts!"
+ watlistani_internal_migrations:0 "Internal Migrations"
+ watlistani_internal_migrations_desc:0 "Greater part of Watlistani societies are still nomadic, and with lifestyle that focuses on changing your home so often, we had to adapt."
+ watlistani_arkhazi_basin_trade:0 "Arkhazi Basin Trade"
+ watlistani_arkhazi_basin_trade_desc:0 "Arkhazi Basin Trade, altough being in the shadow of Sunbati routes, still is one of the more frequented trade routes between east and west, and we can leverage it to increase our chances against the coastal traders."
+ watlistani_visparayan_style_court:0 "Visparayan-style Court"
+ watlistani_visparayan_style_court_desc:0 "With exchange of thoughts and ideas with the visparayans, we have adapted many administrative solutions from them, but also the style of their courts, which is focused on advisors."
+ watlistani_army_administration_reform:0 "Army Administration Reform"
+ watlistani_army_administration_reform_desc:0 "If we want to keep up with bigger or more modern armies, we need to reform administration of our army, so the recruitment is better and faster, and to eliminate draft dodging."
 
  estate_burghers_fra_autonomous_fleets:0 "Autonomous Fleets"
  estate_burghers_fra_autonomous_fleets_desc:0 "Despite officialy being under ownership of the great Nusabat, trade fleets of Fravasum are mostly controlled by merchant elites."
