--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -39,7 +39,7 @@
  frasatahi_ideas_start:0 "Frasatahi Traditions"
  frasatahi_ideas_bonus:0 "Frasatahi Ambition"
  frasatah_qawartian_subjugation:0 "Qawartian Subjugation"
- frasatah_qawartian_subjugation_desc:0 "We subjugated the Aroshas cities in order to strengthen our access to the valuable incense market, greatly upsetting ambitious nation of Qawart. This led to a long war in which we proved to be victorious. Many Sunbati people weren't so happy with our occupation, but granting them significant autonomy quickly silenced them."
+ frasatah_qawartian_subjugation_desc:0 "We subjugated the Aroshas cities in order to strengthen our access to the valuable incense market, greatly upsetting ambitious nation of Qawart. This led to a long war in which we proved to be victorious. Many Sunbat people weren't so happy with our occupation, but granting them significant autonomy quickly silenced them."
  frasatah_rising_nusabate:0 "Rising Nusabate"
  frasatah_rising_nusabate_desc:0 "In the XIV century, our nation controlled merely half of the Raxasamah forest. Now, after many struggles, strategic subjugations and alliances we managed to rise to the top and become a true hegemon in the Anjafrah"
  frasatah_forests_of_raxasamah:0 "Forests of Raxasamah"
@@ -111,9 +111,9 @@
  auruvata_royal_palace_of_gabrasahr:0 "Royal Palace of Gabrasahr"
  auruvata_royal_palace_of_gabrasahr_desc:0 "Royal Palace of Gabrasahr is seen as one of the monuments of prestige and rule over our lands. And many fear it, as its also seen as a symbol of our iron hand."
  
- watlistani_group_ideas:0 "Watlistani Ideas"
- watlistani_group_ideas_start:0 "Watlistani Traditions"
- watlistani_group_ideas_bonus:0 "Watlistani Ambition"
+ watlistani_group_ideas:0 "Watlistani Minor Ideas"
+ watlistani_group_ideas_start:0 "Watlistani Minor Traditions"
+ watlistani_group_ideas_bonus:0 "Watlistani Minor Ambition"
  watlistani_visparayan_influence:0 "Visparayan Influence"
  watlistani_visparayan_influence_desc:0 "Due to Watlistan neighbouring the Visparaya, the exchange of thought between the two is increased, and so we profit from Visparayan administrative inventions."
  watlistani_professional_mercenaries:0 "Professional Mercenaries"
@@ -123,7 +123,7 @@
  watlistani_internal_migrations:0 "Internal Migrations"
  watlistani_internal_migrations_desc:0 "Greater part of Watlistani societies are still nomadic, and with lifestyle that focuses on changing your home so often, we had to adapt."
  watlistani_arkhazi_basin_trade:0 "Arkhazi Basin Trade"
- watlistani_arkhazi_basin_trade_desc:0 "Arkhazi Basin Trade, altough being in the shadow of Sunbati routes, still is one of the more frequented trade routes between east and west, and we can leverage it to increase our chances against the coastal traders."
+ watlistani_arkhazi_basin_trade_desc:0 "Arkhazi Basin Trade, altough being in the shadow of Sunbat routes, still is one of the more frequented trade routes between east and west, and we can leverage it to increase our chances against the coastal traders."
  watlistani_visparayan_style_court:0 "Visparayan-style Court"
  watlistani_visparayan_style_court_desc:0 "With exchange of thoughts and ideas with the visparayans, we have adapted many administrative solutions from them, but also the style of their courts, which is focused on advisors."
  watlistani_army_administration_reform:0 "Army Administration Reform"
