--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -23,9 +23,9 @@
  ehwitraw_nahitar_bastion:0 "Nahitar Bastion"
  ehwitraw_nahitar_bastion_desc:0 "The Nahitar faith has been on retreat for some time. Watlistan is slowly embracing the new Kausali faith and Visparaya has already fallen to the foreign faith of Rah Jadid. Our country is one of the few that still practices this true faith which helped us build our national identity."
 
- mewitasri_ideas:0 "Mewitasri Ideas"
- mewitasri_ideas_bonus:0 "Mewitasri Ambition"
- mewitasri_ideas_start:0 "Mewitasri Traditions"
+ mewitasri_ideas:0 "Mewitan Ideas"
+ mewitasri_ideas_bonus:0 "Mewitan Ambition"
+ mewitasri_ideas_start:0 "Mewitan Traditions"
  mewitasr_land_of_the_younger_brother:0 "Land of the Younger Brother"
  mewitasr_land_of_the_younger_brother_desc:0 "According to the most ancient legend of our nation, all hestani people descend from one of the two brothers who were birthed by the mountain goddess of Nirqad. The brothers fought between themselves which one should rule over the world. After decades of fighting, the older brother, Qanat, settled near the Fadi, while the younger brother was forced into exile to the river Rasus."
  mewitasr_prosperity_of_rasus:0 "Prosperity of Rasus"
@@ -59,20 +59,20 @@
  ehtywira_tight_control:0 "Tight Control"
  ehtywira_tight_control_desc:0 "Our culture was always about authority. People and subjects of the kingdom are obedient to the Ruler, which he uses to keep a tight control over them."
  
- group_sunbat_ideas:0 "Sunbati Ideas"
- group_sunbat_ideas_start:0 "Sunbati Traditions"
- group_sunbat_ideas_bonus:0 "Sunbati Ambition"
+ group_sunbat_ideas:0 "Sunbat Minor Ideas"
+ group_sunbat_ideas_start:0 "Sunbat Minor Traditions"
+ group_sunbat_ideas_bonus:0 "Sunbat Minor Ambition"
  sunbat_religious_tax:0 "Religious Tax"
  sunbat_religious_tax_desc:0 "To increase amount of gold in our treasury, we have to create new taxes. Altough our merchants and citizens don't like new taxes, we can always tax the outsiders following different faiths!"
  sunbat_hestani_settlers:0 "Hestani Settlers"
- sunbat_hestani_settlers_desc:0 "With time, habitable space on the western side of lake Hestan started to run out, so many people started to seeking opportunity to settle on the other side of the lake, and that's how Sunbati city states came to be. It makes Sunbati folk more cohesive."
+ sunbat_hestani_settlers_desc:0 "With time, habitable space on the western side of lake Hestan started to run out, so many people started to seeking opportunity to settle on the other side of the lake, and that's how Sunbat city states came to be. It makes Sunbat folk more cohesive."
  sunbat_professional_militias:0 "Professional Militias"
  sunbat_professional_militias_desc:0 "With advancements in military tactics, we can rely on our army alone no longer. We need to incorporate Militias into administration of our army, and increase they professionalism to keep up with times."
  sunbat_qawartian_city_states:0 "Qawartian City States"
- sunbat_qawartian_city_states_desc:0 "Sunbati city states are key players in Hestani and Qawartian trade, and so their trade importance is undeniable."
+ sunbat_qawartian_city_states_desc:0 "Sunbat city states are key players in Hestani and Qawartian trade, and so their trade importance is undeniable."
  sunbat_coastal_settlements:0 "Coastal Settlements"
  sunbat_coastal_settlements_desc:0 "Our cities were founded on coasts, and with little space left beacuse of Hitraan mountains, we were left with no choice but to master the art of seaside adaptation."
  sunbat_pemenian_middlemen:0 "Pemenian Middlemen"
- sunbat_pemenian_middlemen_desc:0 "Sunbati republics lie on the road connecting Pemenia with the Visparaya, and they leverage this position to dominate local trade routes."
+ sunbat_pemenian_middlemen_desc:0 "Sunbat republics lie on the road connecting Pemenia with the Visparaya, and they leverage this position to dominate local trade routes."
  sunbat_preserve_the_tradition:0 "Preserve the Tradition"
  sunbat_preserve_the_tradition_desc:0 "Our roots lie on the other side of the Hestan lake, altough we had adapt to different conditions on this side of the lake, we can't forget our heritage, our unique architecture, our rich literature. We must do everything to preserve it!"
