--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -149,3 +149,6 @@
  
  bkuslcuht_nation_title:0 "Unite Cak Kecig Peoples @BKS"
  bkuslcuht_nation_desc:0 "Bkuslcuht DESC"
+
+ pitsitoga_nation_title:0 "Restore Pitsitoga @PIT"
+ pitsitoga_nation_desc:0 "Great Kingdom of Pitsitoga once controlled all trade in this part of the world, but due to internal corruption and strife for power it fell apart, left to be conquered by outsiders."
