New Mercs Companies
Balance them if i overdid some modifiers or ratios.

--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -22,3 +22,15 @@
  merc_talaansheng:0 "Talaansheng"
  merc_yautsing_company:0 "Yautsing Company"
  merc_bryncaff_clan:0 "Bryncaff Clan"
+ 
+ merc_arkhazi_band:0 "Arkhazi Band"
+ merc_sunbat_company:0 "Sunbat Company"
+ merc_servants_of_merhaan:0 "Servants of Merhaan"
+ merc_khans_guardsmen:0 "Khan's Guardsmen"
+ merc_tauris_expedition:0 "Tauri's Expedition"
+ merc_daughters_of_the_jungle:0 "Daughters of the Jungle"
+ merc_tamjuqi_corsairs:0 "Tamjuqi Corsairs"
+ merc_protectors_of_anoxwardan:0 "Protectors of Anoxwardan"
+ merc_ghasna_company:0 "Ghasna Company"
+ merc_jhetpalas_company:0 "Jhetpala's Company"
+ merc_pratunu_band:0 "Pratunu Band"
