high piety only hre join

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -308,3 +308,4 @@
  council_of_tetrarchs_reform_desc:0 "After abolishing the idea of elected Emperor, the tetrarchs seized control over the Saelian Empire."
 
  ONLY_SIGILIAN:0 "£no£ Only Sigilian nations can join the Empire."
+ SIGILIAN_HIGH_PIETY:0 "£no£ Your Universalism needs to be above 50 to join the Saelian Empire."
