Voitak and Saensakha
aka Viet and Laos

--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -88,3 +88,5 @@
  pasmangala_region:0 "Pasmangala"
  bkuslcuht_region:0 "Bkuslcuht" 
  aiunusu_region:0 "Aiunusu"
+ ivory_coast_region:0 "Voitak"
+ saensakha_region:0 "Saen-Sakha"
