Viravanati Group Ideas
Matter to change later if needed.

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -5,3 +5,21 @@
  rakkha_empire_reform_desc:0 "Northern states of western Samadia have often taken a matle of 'Guardian State', not only protecting the southern states from nomadic invaders, but also controlling vital trading routes."
  mechanic_only_tributaries_same_culture_group:0 "Can only have tributaries of the same culture group."
  mechanic_only_tributaries_same_culture_group_yes:0 "Can only have tributaries of the same culture group."
+ 
+ viravanati_group_ideas:0 "Viravanati Minor Ideas"
+ viravanati_group_ideas_start:0 "Viravanati Minor Traditions"
+ viravanati_group_ideas_bonus:0 "Viravanati Minor Ambition"
+ viravanati_across_the_strait:0 "Across the Strait"
+ viravanati_across_the_strait_desc:0 "Through colonization of the western coast of Amsulan Gulf, and maintaining good relations with newly-founded states on the other side, we managed to secure a important sea trade route, and we can now reap the benefits."
+ viravanati_curb_the_evil_within:0 "Curb the Evil Within"
+ viravanati_curb_the_evil_within_desc:0 "Despite differences between Otigari and Nallavul faiths, we agree on one thing: We must fight against the evil gods, and there is no better way than to empower positions of our priests so they could lead us in this matter."
+ viravanati_on_the_road_of_enlightenment:0 "On the Road of Enlightenment"
+ viravanati_on_the_road_of_enlightenment_desc:0 "Through abandonment of faith in gods, and seeing them as evil, ore society is more tolerant and welcome to the new ideas, and less likely to rebel in the name faith in gods"
+ viravanati_repel_the_northerners:0 "Repel the Northerners"
+ viravanati_repel_the_northerners_desc:0 "Despite Northern kingdoms being a threath to the goodness and well-being are true or not, one thing is undeniable: They are a threat to existence of our very way of life. We need to mobilize the masses to fight back!"
+ viravanati_ban_faith_in_gods:0 "Ban the faith in Gods"
+ viravanati_ban_faith_in_gods_desc:0 "Despite the fact that many of our citizens agree with our priests, that all gods are evil, there are some that still belive in some kind of gods. We need to eradicate all traces of faith in any gods, and there is no better way to do it than oficially ban it."
+ viravanati_maritime_tradition:0 "Maritime Tradition"
+ viravanati_maritime_tradition_desc:0 "Despite many differences between various Viravanati countries, we share the same roots. Roots that are focused on sailing, trading and exploring. We never cannot forget our culture lies as much on water, as it lies on land."
+ viravanati_unique_architecture:0 "Viravanati Architecture"
+ viravanati_unique_architecture_desc:0 "With our unique societal and religious circumstances, our society developed an unique architectural style, which can be found nowhere else than in Tivappu. Many outsiders come to our lands just to be able to study it, and it is a great source of prestige for us."
