Viravanati ideas fix

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -13,8 +13,8 @@
  viravanati_across_the_strait_desc:0 "Through colonization of the western coast of Amsulan Gulf, and maintaining good relations with newly-founded states on the other side, we managed to secure a important sea trade route, and we can now reap the benefits."
  viravanati_curb_the_evil_within:0 "Curb the Evil Within"
  viravanati_curb_the_evil_within_desc:0 "Despite differences between Otigari and Nallavul faiths, we agree on one thing: We must fight against the evil gods, and there is no better way than to empower positions of our priests so they could lead us in this matter."
- viravanati_on_the_road_of_enlightenment:0 "On the Road of Enlightenment"
- viravanati_on_the_road_of_enlightenment_desc:0 "Through abandonment of faith in gods, and seeing them as evil, ore society is more tolerant and welcome to the new ideas, and less likely to rebel in the name faith in gods"
+ viravanati_on_the_road_to_enlightenment:0 "On the Road to Enlightenment"
+ viravanati_on_the_road_to_enlightenment_desc:0 "Through abandonment of faith in gods, and seeing them as evil, ore society is more tolerant and welcome to the new ideas, and less likely to rebel in the name faith in gods"
  viravanati_repel_the_northerners:0 "Repel the Northerners"
  viravanati_repel_the_northerners_desc:0 "Despite Northern kingdoms being a threath to the goodness and well-being are true or not, one thing is undeniable: They are a threat to existence of our very way of life. We need to mobilize the masses to fight back!"
  viravanati_ban_faith_in_gods:0 "Ban the faith in Gods"
