--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -23,3 +23,21 @@
  viravanati_maritime_tradition_desc:0 "Despite many differences between various Viravanati countries, we share the same roots. Roots that are focused on sailing, trading and exploring. We never cannot forget our culture lies as much on water, as it lies on land."
  viravanati_unique_architecture:0 "Viravanati Architecture"
  viravanati_unique_architecture_desc:0 "With our unique societal and religious circumstances, our society developed an unique architectural style, which can be found nowhere else than in Tivappu. Many outsiders come to our lands just to be able to study it, and it is a great source of prestige for us."
+ 
+ mazavasi_group_ideas:0 "Mazavasi Minor Ideas"
+ mazavasi_group_ideas_start:0 "Mazavasi Minor Traditions"
+ mazavasi_group_ideas_bonus:0 "Mazavasi Minor Ambition"
+ mazavasi_new_agricultural_methods:0 "New Agricultural Methods"
+ mazavasi_new_agricultural_methods_desc:0 "With rising amount of people living in our lands, and not too fertile lands, we need to improve and advance our agriculture, so the peasants don't starve."
+ mazavasi_moral_teachings:0 "Moral Teachings"
+ mazavasi_moral_teachings_desc:0 "Either if we belive that High Priest is God, his messenger, or just a delusional fool, there is one undeniable thing about him: He is wise, and his teachings have their moral value, even if we don't agree on the matter of faith. We should utilize them to the fullest to advance progress of our society."
+ mazavasi_flourish_the_education:0 "Flourish the Education"
+ mazavasi_flourish_the_education_desc:0 "With how much of an impact religion has on our culture, and how it preaches about importance of education, we would be unwise to not help the endeavour. We shall open new universities in our country!"
+ mazavasi_salvation_from_sins:0 "Salvation from Sins"
+ mazavasi_salvation_from_sins_desc:0 "Different faith are a sin on this world, and we need to help our lost brethren to find a way out of their sinful lifes. We will preach word of our faith all over Samadia!"
+ mazavasi_desjaniti_diplomacy:0 "Desjaniti Diplomacy"
+ mazavasi_desjaniti_diplomacy_desc:0 "Despite our political differences, we all answer to the same High Priest, and so we should treat our brethren in faith with respect. We will put all of our diplomatic to see that happen!"
+ mazavasi_administration_reforms:0 "Administration Reform"
+ mazavasi_administration_reforms_desc:0 "With corruption becoming more of an issue within our society, our High Priest declared it a Sin, and so we followed with appropriate reform to combat the issue."
+ mazavasi_gunpowder_innovations:0 "Gunpowder Innovations"
+ mazavasi_gunpowder_innovations_desc:0 "With amount of universities and engineers in our region, which we owe to our religious and cultural circumstances, combined with fast adaptation of gunpowder in our homeland, we managed to improve gunpowder used in our cannons, making them more powerful."
