Imperial Diet Events
3 hours, end my suffering.

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -309,3 +309,33 @@
 
  ONLY_SIGILIAN:0 "£no£ Only Sigilian nations can join the Empire."
  SIGILIAN_HIGH_PIETY:0 "£no£ Your Universalism needs to be above 50 to join the Saelian Empire."
+ emperor_fixed_peasant_loophole:0 "Has fixed peasant-related loophole"
+ emperor_allowed_peasant_loophole:0 "Allowed peasant-related loophole to exist"
+ emperor_expanded_mining_rights:0 "Expanded mining rights"
+ emperor_has_not_lowered_taxes_for_burghers:0 "Has not lowered taxes for us"
+ emperor_deposed_our_monarch:0 "Deposed our monarch"
+ emperor_did_not_depose_our_monarch:0 "Spared our monarch"
+ emperor_did_not_depose_sinful_prince:0 "Didn't depose sinful prince"
+ emperor_has_given_out_my_land:0 "Has given out my land"
+ emperor_stood_with_noble_in_the_cow_scandal_negative:0 "Forced city to recompensate the cow"
+ emperor_stood_with_noble_in_the_cow_scandal_positive:0 "Forced city to recompensate the cow"
+ emperor_refunded_the_cow_negative:0 "Refunded the cow"
+ emperor_refunded_the_cow_positive:0 "Refunded the cow"
+ emperor_favors_stance_A_positive:0 "Favors stance A" #Change it laters pls
+ emperor_favors_stance_A_negative:0 "Favors stance A"
+ emperor_favors_stance_B_positive:0 "Favors stance B"
+ emperor_favors_stance_B_negative:0 "Favors stance B"
+ emperor_favored_him_in_border_dispute:0 "Favored in border dispute"
+ emperor_did_not_favored_him_in_border_dispute:0 "Didn't favored in border dispute"
+ emperor_increased_border_tarrifs:0 "Increased border tarrifs"
+ emperor_refused_domain_expansion:0 "Refused Domain Expansion"
+ 
+ TD_Diet_New_Defenses:0 "New Defenses"
+ TD_Diet_Improved_Road_Infrastructure:0 "Improved Road Infrastructure"
+ TD_Diet_Refurbished_Marketplace:0 "Refurbished Marketplace"
+ TD_Diet_Upset_Imperial_Burghers:0 "Upset Imperial Burghers"
+ TD_Diet_Absolutist_Monarch:0 "Absolutist Monarch"
+ TD_Diet_Imperial_Weaponry:0 "Imperial Weaponry"
+ TD_Diet_High_Border_Tarrifs:0 "High Border Tarrifs"
+ TD_Diet_Increased_Free_Trade:0 "Increased Free Trade"
+ TD_Diet_Domain_Expanded:0 "Domain Expanded"
