Imperial Diet + IA gain nerf + Randomness fix

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -308,7 +308,81 @@
  council_of_tetrarchs_reform_desc:0 "After abolishing the idea of elected Emperor, the tetrarchs seized control over the Saelian Empire."
 
  ONLY_SIGILIAN:0 "£no£ Only Sigilian nations can join the Empire."
- SIGILIAN_HIGH_PIETY:0 "£no£ Your Universalism needs to be above 50 to join the Saelian Empire."
+ SIGILIAN_HIGH_PIETY:0 "£no£ Your Imperial Allegiance needs to be above 50 to join the Saelian Empire."
+ SIGILIAN_LOW_PIETY:0 "£no£ Your Imperial Allegiance needs to be below -25 to leave the Saelian Empire."
+ EMPEROR_CANT_ATTACK_SUBJECTS:0 "The Emperor cannot declare wars against his subjects without the permission from the tetrarchy."
+
+ 
+ Hold_Diet:0 "Hold the Diet"
+ TD_Imperial_Decree5_tooltip:0 "Gather the Imperial Diet in order to increase your imperial authority - at a cost..."
+ diet_active_flag_trigger:0 "The Imperial Diet is NOT active."
+ no_diet_cooldown_trigger:0 "The Imperial Diet is NOT on cooldown (25 years)."
+ saelian.100.t:0 "The Imperial Diet"
+ saelian.100.desc:0 "In order to maintain authority and grip over the empire as its rightful ruler, the emperor must occasionaly participate in an Imperial Diet. This ritual is an opportunity for princes to request (or abuse) emperor's help, which emperor can use to gain favors, earn their support and loyalty, or simply increase their legitimacy inthe eyes of his subjects."
+ saelian.100.a:0 "Let the Diet Commence"
+ saelian.100.a_tt:0 "The Emperor will receive 3 random events in the span of the next 180 days. During this time, countries in the Empire may use interactions available in the Saelian Empire Interface."
+ saelian.100.b:0 "On the second thought..."
+ saelian.102.t:0 "The End of the Imperial Diet"
+ saelian.102.desc:0 "After a long and exhausting time of solving issues within the empire, the diet has officialy came to an end."
+ saelian.102.a:0 "Now time to get some rest."
+
+ saelian.201.t:0 "Tetrarch Abuses Power"
+ saelian.201.desc:0 "REPLACE_ME"
+ saelian.201.a:0 "Allow it"
+ saelian.201.b:0 "Prevent it"
+ saelian.202.t:0 "Guilds Request Increased Tarrifs"
+ saelian.202.desc:0 "REPLACE_ME"
+ saelian.202.a:0 "Increase the tax"
+ saelian.202.b:0 "We can't upset our friends abroad."
+ saelian.203.t:0 "Princely Border Dispute"
+ saelian.203.desc:0 "REPLACE_ME"
+ saelian.203.a:0 "The first prince is clearly right."
+ saelian.203.b:0 "Favor the second prince."
+ saelian.204.t:0 "Split in the Tetrarchy"
+ saelian.204.desc:0 "REPLACE_ME"
+ saelian.204.a:0 "Support the tradition."
+ saelian.204.b:0 "Our religion needs to move forward."
+ saelian.205.t:0 "Cow Selling Scandal"
+ saelian.205.desc:0 "REPLACE_ME"
+ saelian.205.a:0 "The City must recompensate."
+ saelian.205.a_tt:0 "Gain §G10§! opinion from monarchies and lose §R50§! opinion from republics in the empire."
+ saelian.205.b:0 "Refund the purchase"
+ saelian.205.c:0 "How amusing!"
+ saelian.206.t:0 "Holy Investiture"
+ saelian.206.desc:0 "REPLACE_ME"
+ saelian.206.a:0 "Allow it"
+ saelian.206.b:0 "Deny it"
+ saelian.207.t:0 "Request for War Supplies"
+ saelian.207.desc:0 "REPLACE_ME"
+ saelian.207.a:0 "Granted"
+ saelian.207.b:0 "We can't afford such help right now."
+ saelian.208.t:0 "Deposition of prince [Emperor_diet_this_noble_has_negative_piety_target.Monarch.GetName]"
+ saelian.208.desc:0 "REPLACE_ME"
+ saelian.208.a:0 "He can't be allowed to own land in our empire."
+ saelian.208.b:0 "He shall remain a ruler."
+ saelian.209.t:0 "Merchants Demand Lower Taxes"
+ saelian.209.desc:0 "REPLACE_ME"
+ saelian.209.a:0 "Decrease the Tax"
+ saelian.209.b:0 "Bah! We need these money."
+ saelian.210.t:0 "Expansion of Mining Rights"
+ saelian.210.desc:0 "REPLACE_ME"
+ saelian.210.a:0 "Fund the Construction"
+ saelian.210.b:0 "This is too risky."
+ saelian.211.t:0 "Imperial City Requests Funding"
+ saelian.211.desc:0 "REPLACE_ME"
+ saelian.211.a:0 "Grant the Fund"
+ saelian.211.b:0 "You are asking too much of the crown."
+ saelian.212.t:0 "Prince Requests Emperor's Land"
+ saelian.212.desc:0 "REPLACE_ME"
+ saelian.212.a:0 "If this is the price to please the public..."
+ saelian.212.b:0 "Are you out of your mind?!"
+ saelian.213.t:0 "Peasants Becoming too free"
+ saelian.213.desc:0 "REPLACE_ME"
+ saelian.213.a:0 "Fix the Loophole"
+ saelian.213.b_tt:0 "All monarchies gain §G20§! opinion of the emperor.\nGain §R3.00§! Unrest in §Yevery imperial province§!."
+ saelian.213.b:0 "We might benefit from more independent peasantry."
+ saelian.213.b_tt:0 "All monarchies lose §R50§! opinion of the emperor."
+
  emperor_fixed_peasant_loophole:0 "Has fixed peasant-related loophole"
  emperor_allowed_peasant_loophole:0 "Allowed peasant-related loophole to exist"
  emperor_expanded_mining_rights:0 "Expanded mining rights"
@@ -321,10 +395,10 @@
  emperor_stood_with_noble_in_the_cow_scandal_positive:0 "Forced city to recompensate the cow"
  emperor_refunded_the_cow_negative:0 "Refunded the cow"
  emperor_refunded_the_cow_positive:0 "Refunded the cow"
- emperor_favors_stance_A_positive:0 "Favors stance A" #Change it laters pls
- emperor_favors_stance_A_negative:0 "Favors stance A"
- emperor_favors_stance_B_positive:0 "Favors stance B"
- emperor_favors_stance_B_negative:0 "Favors stance B"
+ emperor_favors_stance_A_positive:0 "Favors The Tradition"
+ emperor_favors_stance_A_negative:0 "Favors The Tradition"
+ emperor_favors_stance_B_positive:0 "Favors Progress"
+ emperor_favors_stance_B_negative:0 "Favors Progress"
  emperor_favored_him_in_border_dispute:0 "Favored in border dispute"
  emperor_did_not_favored_him_in_border_dispute:0 "Didn't favored in border dispute"
  emperor_increased_border_tarrifs:0 "Increased border tarrifs"
