--- a/localisation/winds_of_change_l_english.yml
+++ b/localisation/winds_of_change_l_english.yml
@@ -321,6 +321,7 @@
  merc_gavras_house_guards:0 "Gavras House Guards"
  
  #Scripted Effects
+ production_3:0 "Distribute §Y3§! £dip£ development"
  production_5:0 "Distribute §Y5§! £dip£ development"
  production_10:0 "Distribute §Y10§! £dip£ development"
  production_15:0 "Distribute §Y15§! £dip£ development"
