--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -308,8 +308,8 @@
  INSTI_NOT_ENOUGH_HOLD:0 "The institution of $NAME|Y$ has not a big enough hold of our country for us to fully embrace it.  It needs to be embraced in at least $NEED|Y$ percent of our autonomy modified development, but it is only embraced in $CURR|Y$ percent."
  EMBRACE_INSTI_COST:2 "Embracing $NAME|Y$ will cost $COST|Y$¤."
  MANAGE_OVEREXTENSION:0 "Manage Overextension"
- EMPEROR_DIPACTIONS_DESC:0 "\nThe Emperor may take the following diplomatic actions: \n$LIST|Y$"
- PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "The Episcopal controller may take the following diplomatic actions: \n$LIST|Y$"
+ EMPEROR_DIPACTIONS_DESC:0 "\nThe Emperor may take the following diplomatic actions: \n$LIST|Y$\n§YFund Fortification Construction\nFabricate Casus Belli\nInvestigate Heresy§!"
+ PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "The Episcopal controller may take the following diplomatic actions:\n$LIST|Y$"
  PAPACY_NEXT_CARDINALS:0 "§YNext Possible Cardinals§W"
  UNIT_UNLOCKED_AT_TECH:0 "'$UNIT|Y$' unlocked at $TECH$ ($LEVEL$)."
  UNIT_REORG_TRANSFER:0 "Click to transfer all units of this type.\nRight-click to transfer half of all units of this type."
