--- a/localisation/TD_parliaments_l_english.yml
+++ b/localisation/TD_parliaments_l_english.yml
@@ -1,6 +1,5 @@
-﻿#for some god-forsaken reason, parliament names are DEFINED ONLY IN LOCALISATION
-l_english:
- HLR_parliament_name:0 "Imperial Diet"
+﻿l_english:
+ HLR_parliament_name:0 "Diet"
  zbojaner_group_parliament_name:0 "Wiec"
  NAB_parliament_name:0 "Cunnadhul"
  CAT_parliament_name:0 "Cunnadhul"
